@@ -11,10 +11,11 @@
 			{if !$customerinfo.deleted}
 			<A href="?m=customerassignmentadd&amp;id={$customerinfo.id}">{trans("New Liability")} &raquo;</A>
 				{if $layout.module == 'customerassignmentedit'}
-				<A href="?m={$layout.module}&amp;expired={if $expired}0{else}1{/if}&amp;id={$assignment.id}">{if $expired}{trans("Hide expired")}{else}{trans("Show expired")}{/if} &raquo;</A>&nbsp;
+				<A href="?m={$layout.module}&amp;expired={if $expired}0{else}1{/if}&amp;id={$assignment.id}">{if $expired}{trans("Hide expired")}{else}{trans("Show expired")}{/if} &raquo;</A>
 				{else}
-				<A href="?m={$layout.module}&amp;expired={if $expired}0{else}1{/if}&amp;id={if $nodeinfo}{$nodeinfo.id}{else}{$customerinfo.id}{/if}">{if $expired}{trans("Hide expired")}{else}{trans("Show expired")}{/if} &raquo;</A>&nbsp;
+				<A href="?m={$layout.module}&amp;expired={if $expired}0{else}1{/if}&amp;id={if $nodeinfo}{$nodeinfo.id}{else}{$customerinfo.id}{/if}">{if $expired}{trans("Hide expired")}{else}{trans("Show expired")}{/if} &raquo;</A>
 				{/if}
+			<A onClick="return confirmLink(this, '{trans("Are you sure, you want to delete all liabilities?")}')" href="?m=customerassignmentdel&amp;cid={$customerinfo.id}">{trans("Delete all")} &raquo;</A>
 			{/if}
 		</TD>
 	</TR>
